--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,17 @@ body {
   justify-content: center;
 }
 
+.container-loading {
+  align-items: center;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+}
+
+.logo-loading {
+  max-width: 800px;
+}
+
 .container-game {
   align-items: center;
   height: 100vh;
@@ -37,9 +48,14 @@ body {
   pointer-events: none;
 }
 
+
 @media ( prefers-reduced-motion : no-preference ) {
 
   .App-logo {
+    animation: shake infinite 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  }
+
+  .logo {
     animation: shake infinite 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   }
 }
